# bangumi-birthday

./: .env.example  .gitignore  README.md  hbd2waifu.xlsm  output.txt  pyproject.toml
bangumi_birthday/: __init__.py  config.py
bangumi_birthday/cli/: __init__.py  birthday_search.py  main.py  output_gen.py  top_chars.py
bangumi_birthday/db/: __init__.py  models.py  mongo.py
bangumi_birthday/etl/: __init__.py  extract_chars.py  extract_relations.py  merge.py  pipeline.py
bangumi_birthday/utils/: __init__.py  date_utils.py  jsonlines.py
scripts/: id_match.py
tests/: test_backend_services.py  test_date_utils.py  test_etl_extract.py  test_jsonlines.py
web/backend/: app.py  tempCodeRunnerFile.py
web/backend/routes/: birthday.py
web/backend/services/: bangumi_api.py  birthday_svc.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: main.js  style.css
web/frontend/src/components/: CharacterCard.vue  SearchBar.vue
web/frontend/src/composables/: useBirthday.js  useDatePicker.js
web/frontend/src/views/: HomeView.vue
